tests/fail/parser-assign8.dit
A {
    String value;
}

A a;

A assign(val){
    value = val;
}

a.value = assign('test';